refactor: pipeline improvements