@@ -1,7 +1,7 @@
 package eu.pmav.pxp0p.configuration.manual.impl;
 
+import eu.pmav.pxp0p.configuration.FrameConfiguration;
 import eu.pmav.pxp0p.render.forms.FormType;
-import eu.pmav.pxp0p.configuration.Configuration;
 import eu.pmav.pxp0p.configuration.manual.ManualGenerator;
 
 import java.io.IOException;
@@ -10,7 +10,7 @@ import java.util.List;
 
 public class InstagramManualGenerator extends ManualGenerator
 {
-    public List<Configuration> generateConfigurations() throws IOException, ClassNotFoundException
+    protected List<FrameConfiguration> generateConfigurationsInternal() throws Exception
     {
         // Set colors
         int colorWhite = 0xffDCDCDC;
@@ -39,19 +39,19 @@ public class InstagramManualGenerator extends ManualGenerator
         List<Object> colorsBackground = List.of(colorBlack);
 
         // Initial configuration
-        List<Configuration> configurations = Collections.singletonList(new Configuration());
+        List<FrameConfiguration> frameConfigurations = Collections.singletonList(new FrameConfiguration());
 
         // Layout
-        configurations = applyParameter(configurations, List.of(16), (c, v) -> c.setObjectColumns((int) v));
-        configurations = applyParameter(configurations, List.of(16), (c, v) -> c.setObjectLines((int) v));
-        configurations = applyParameter(configurations, List.of(10), (c, v) -> c.setObjectSpacing((int) v));
+        frameConfigurations = applyParameter(frameConfigurations, List.of(16), (c, v) -> c.setObjectColumns((int) v));
+        frameConfigurations = applyParameter(frameConfigurations, List.of(16), (c, v) -> c.setObjectLines((int) v));
+        frameConfigurations = applyParameter(frameConfigurations, List.of(10), (c, v) -> c.setObjectSpacing((int) v));
 
-        configurations = applyParameter(configurations, colorsBackground, (c, v) -> c.setColorBackground((int) v));
-        configurations = applyParameter(configurations, List.of(0.6f), (c, v) -> c.setBlurValue((float) v));
-        configurations = applyParameter(configurations, Collections.singletonList(new FormType[]{FormType.TRIANGLE}), (c, v) -> c.setObjectTypes((FormType[]) v));
+        frameConfigurations = applyParameter(frameConfigurations, colorsBackground, (c, v) -> c.setColorBackground((int) v));
+        frameConfigurations = applyParameter(frameConfigurations, List.of(0.6f), (c, v) -> c.setBlurValue((float) v));
+        frameConfigurations = applyParameter(frameConfigurations, Collections.singletonList(new FormType[]{FormType.TRIANGLE}), (c, v) -> c.setObjectTypes((FormType[]) v));
 
         // Direction
-        configurations = applyParameter(configurations, List.of(false), (c, v) -> c.setHaveDirection((boolean) v));
+        frameConfigurations = applyParameter(frameConfigurations, List.of(false), (c, v) -> c.setHaveDirection((boolean) v));
         //configurations = applyParameter(configurations, List.of(), (c, v) -> c.setCalculateDirection((Function<Integer, Integer>) v));
 
         //PApplet.parseInt(pApplet.random(0, 4))
@@ -62,36 +62,36 @@ public class InstagramManualGenerator extends ManualGenerator
         //configurations = applyParameter(configurations, List.of(colorsInstagram), (c, v) -> c.setColorsTriangle((int[]) v));
 
         // Size Transform
-        configurations = applyParameter(configurations, List.of(false), (c, v) -> c.setHaveSizeTransform((boolean) v));
-        configurations = applyParameter(configurations, List.of(1.0f), (c, v) -> c.setMinSizeTransform((float) v));
-        configurations = applyParameter(configurations, List.of(1.2f), (c, v) -> c.setMaxSizeTransform((float) v));
+        frameConfigurations = applyParameter(frameConfigurations, List.of(false), (c, v) -> c.setHaveSizeTransform((boolean) v));
+        frameConfigurations = applyParameter(frameConfigurations, List.of(1.0f), (c, v) -> c.setMinSizeTransform((float) v));
+        frameConfigurations = applyParameter(frameConfigurations, List.of(1.2f), (c, v) -> c.setMaxSizeTransform((float) v));
 
         // Alpha
-        configurations = applyParameter(configurations, List.of(false), (c, v) -> c.setHaveAlpha((boolean) v));
-        configurations = applyParameter(configurations, List.of(0), (c, v) -> c.setMinAlpha((int) v));
-        configurations = applyParameter(configurations, List.of(150), (c, v) -> c.setMaxAlpha((int) v));
+        frameConfigurations = applyParameter(frameConfigurations, List.of(false), (c, v) -> c.setHaveAlpha((boolean) v));
+        frameConfigurations = applyParameter(frameConfigurations, List.of(0), (c, v) -> c.setMinAlpha((int) v));
+        frameConfigurations = applyParameter(frameConfigurations, List.of(150), (c, v) -> c.setMaxAlpha((int) v));
 
         // Variation
-        configurations = applyParameter(configurations, List.of(0), (c, v) -> c.setxVariation((int) v));
-        configurations = applyParameter(configurations, List.of(0), (c, v) -> c.setyVariation((int) v));
+        frameConfigurations = applyParameter(frameConfigurations, List.of(0), (c, v) -> c.setxVariation((int) v));
+        frameConfigurations = applyParameter(frameConfigurations, List.of(0), (c, v) -> c.setyVariation((int) v));
 
         // Stroke
-        configurations = applyParameter(configurations, List.of(true), (c, v) -> c.setHaveStroke((boolean) v));
-        configurations = applyParameter(configurations, List.of(4), (c, v) -> c.setStrokeSize((int) v));
-        configurations = applyParameter(configurations, colorsStroke, (c, v) -> c.setStrokeColor((int) v));
+        frameConfigurations = applyParameter(frameConfigurations, List.of(true), (c, v) -> c.setHaveStroke((boolean) v));
+        frameConfigurations = applyParameter(frameConfigurations, List.of(4), (c, v) -> c.setStrokeSize((int) v));
+        frameConfigurations = applyParameter(frameConfigurations, colorsStroke, (c, v) -> c.setStrokeColor((int) v));
 
         // Center Object
-        configurations = applyParameter(configurations, List.of(true), (c, v) -> c.setHaveCenterObject((boolean) v));
-        configurations = applyParameter(configurations, List.of(0.5f), (c, v) -> c.setCenterObjectSize((float) v));
-        configurations = applyParameter(configurations, List.of(colorsBlue), (c, v) -> c.setColorsCenterObject((int[]) v));
+        frameConfigurations = applyParameter(frameConfigurations, List.of(true), (c, v) -> c.setHaveCenterObject((boolean) v));
+        frameConfigurations = applyParameter(frameConfigurations, List.of(0.5f), (c, v) -> c.setCenterObjectSize((float) v));
+        frameConfigurations = applyParameter(frameConfigurations, List.of(colorsBlue), (c, v) -> c.setColorsCenterObject((int[]) v));
 
         // Cuts
-        configurations = applyParameter(configurations, List.of(false), (c, v) -> c.setHaveCuts((boolean) v));
-        configurations = applyParameter(configurations, List.of(0.8f), (c, v) -> c.setCutSize((float) v));
+        frameConfigurations = applyParameter(frameConfigurations, List.of(false), (c, v) -> c.setHaveCuts((boolean) v));
+        frameConfigurations = applyParameter(frameConfigurations, List.of(0.8f), (c, v) -> c.setCutSize((float) v));
 
-        configurations = applyParameter(configurations, List.of(colorsBlue), (c, v) -> c.setColorsCutCircle((int[]) v));
-        configurations = applyParameter(configurations, List.of(colorsBlue), (c, v) -> c.setColorsCutSquare((int[]) v));
-        configurations = applyParameter(configurations, List.of(colorsBlue), (c, v) -> c.setColorsCutTriangle((int[]) v));
+        frameConfigurations = applyParameter(frameConfigurations, List.of(colorsBlue), (c, v) -> c.setColorsCutCircle((int[]) v));
+        frameConfigurations = applyParameter(frameConfigurations, List.of(colorsBlue), (c, v) -> c.setColorsCutSquare((int[]) v));
+        frameConfigurations = applyParameter(frameConfigurations, List.of(colorsBlue), (c, v) -> c.setColorsCutTriangle((int[]) v));
 
 //        // Update parameters
 //        configurations = applyParameter(configurations, List.of(16), (c, v) -> c.setObjectColumns((int) v));
@@ -121,8 +121,8 @@ public class InstagramManualGenerator extends ManualGenerator
 //        configurations = applyParameter(configurations, List.of(colorsSlack), (c, v) -> c.setColorsCutSquare((int[]) v));
 //        configurations = applyParameter(configurations, List.of(colorsSlack), (c, v) -> c.setColorsCutTriangle((int[]) v));
 
-        System.out.printf("Generated %s configurations...%n", configurations.size());
+        System.out.printf("Generated %s configurations...%n", frameConfigurations.size());
 
-        return configurations;
+        return frameConfigurations;
     }
 }
